--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,31 +2,62 @@
 <html lang="en">
 <head>
     <title>Lid Demo Home</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <link href="styles/style.css" rel="stylesheet">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="styles/bootstrap-social.css" rel="stylesheet">
+<link href="styles/material.css" rel="stylesheet">
+<link href="styles/style.css" rel="stylesheet">
 </head>
-<body>
-<h1>Home Page</h1>
+<body class="cilogi-info">
 
-<p id="loginStatus">Acquiring Login Status...</p>
+<nav class="navbar navbar-fixed-top panel">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <a class="navbar-brand" href="/index.html">Cilogi</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/login.html">Login</a></li>
+            <li><a href="/auth.ftl">Auth</a></li>
+          <li><a href="/about.html">About</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container" style="margin-top:10px; font-size:15px;">
+    <div style="padding: 0.25em" class="cilogi-title">
+        <h1 class="cilogi-title">Home Page</h1>
+    </div>
+    <hr class="soften">
+    <section>
+        <div class="row">
+            <p id="loginStatus">Acquiring Login Status...</p>
 
-<div id="loggedIn" style="display:none">
-    <form id="logoutForm" method="POST" action="/logout">
-        <button type="submit">Logout</button>
-    </form>
+            <div id="loggedIn" style="display:none">
+                <form id="logoutForm" method="POST" action="/logout">
+                    <button class="btn btn-primary" type="submit">Logout</button>
+                </form>
+            </div>
+
+            <div style="margin-top:10px;">
+                <p>The link below, is to a file you can only access when you're logged in.</p>
+                <a class="btn btn-default" href="auth.ftl">Only for Authenticated users</a>
+            </div>
+
+            <div id="loggedOut" style="margin-top: 10px; display:none">
+                <a class="btn btn-primary" href="/login.html">Login</a>
+            </div>
+        </div>
+    </section>
 </div>
-
-<div>
-    <p>The link below, is to a file you can only access when you're logged in.</p>
-    <a href="auth.ftl">Only for Authenticated users</a>
-</div>
-
-<div id="loggedOut" style="display:none">
-    <a href="/login.html">Login</a>
-</div>
+<!-- container -->
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="scripts/script.js"></script>
-</body>
+<script src="scripts/script.js"></script></body>
 </html>
