--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,37 +2,78 @@
 <html lang="en">
 <head>
     <title>Lid Demo Login</title>
-    <link href="styles/style.css" rel="stylesheet">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="styles/bootstrap-social.css" rel="stylesheet">
+<link href="styles/material.css" rel="stylesheet">
+<link href="styles/style.css" rel="stylesheet">
 </head>
-<body>
-<h1>Login</h1>
+<body class="cilogi-info">
 
-<div id="loggedIn">
-    <p>You are logged in!</p>
-    <p><a href="/index.html">Home</a></p>
+<nav class="navbar navbar-fixed-top panel">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <a class="navbar-brand" href="/index.html">Cilogi</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/login.html">Login</a></li>
+            <li><a href="/auth.ftl">Auth</a></li>
+          <li><a href="/about.html">About</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container" style="margin-top:10px; font-size:15px;">
+    <div style="padding: 0.25em" class="cilogi-title">
+        <h1 class="cilogi-title">Login</h1>
+    </div>
+    <hr class="soften">
+    <section>
+        <div class="row">
+            <div id="loggedIn">
+                <p>You are logged in!</p>
+
+                <p><a class="btn btn-default" href="/index.html">Home</a></p>
+            </div>
+
+            <div id="loggedOut" style="display:none">
+                <form class="login-form" method="POST" action="/login/google">
+                    <div>
+                        <button type="submit" class="btn btn-block btn-social btn-google">
+                            <i class="fa fa-google"></i> Sign in with Google
+                        </button>
+                    </div>
+                </form>
+                <form class="login-form" method="POST" action="/login/facebook">
+                    <div>
+                        <button type="submit" class="btn btn-block btn-social btn-facebook">
+                            <i class="fa fa-facebook"></i> Sign in with Facebook
+                          </button>
+                    </div>
+                </form>
+                <form id="loginByEmail" class="login-form" method="POST" action="/login/email">
+                     <div>
+                         <button type=submit class="btn btn-social btn-openid">
+                             <i class="fa fa-sign-in"></i> Sign in with Email
+                         </button>
+                         <label for="email">Email</label>
+                         <input type="text" name="email" id="email">
+                         <span id="emailResponse"></span>
+                     </div>
+                 </form>
+            </div>
+        </div>
+    </section>
 </div>
 
-<div id="loggedOut" style="display:none">
-    <form  id="loginByEmail" class="login-form" method="POST" action="/login/email">
-        <div>
-            <button type="submit">Login by Email</button>
-            <label for="email">Email</label>
-            <input type="text" name="email" id="email">
-            <span id="emailResponse"></span>
-        </div>
-    </form>
-    <form class="login-form" method="POST" action="/login/google">
-        <div>
-            <button type="submit" id="googleLogin">Google Login</button>
-        </div>
-    </form>
-    <form class="login-form" method="POST" action="/login/facebook">
-        <div>
-            <button type="submit">Facebook Login</button>
-        </div>
-    </form>
-</div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="scripts/script.js"></script>
-</body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="scripts/script.js"></script></body>
 </html>
