changes for Facebook auth

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -64,10 +64,21 @@
                              <i class="fa fa-sign-in"></i> Sign in with Email
                          </button>
                          <label for="email">Email</label>
-                         <input type="text" name="email" id="email">
+                         <input type="text" name="email" id="email" style="padding-bottom:5px; padding-top:1px; width:200px;">
                          <span id="emailResponse"></span>
                      </div>
                  </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6" style="margin-top: 20px; padding-left: 0;">
+                <p>Although you don't need to remember a password there is no guarantee that if you
+                   choose a different login method next time you'll go the right account since Facebook
+                   does not always give us an Email address to use as your id; or you may have more
+                   than one Email address and then forget which one you used..</p>
+                <p>If you do forget what identity you used to login we can't help.  Our emphasis on
+                   your privacy, and the fact that we don't store any information other than your id, means
+                   that you'll just have to try and remember the ID you used!</p>
             </div>
         </div>
     </section>
