more login formatting

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -32,7 +32,7 @@
 </nav>
 <div class="container-fluid" style="margin-top:10px; font-size:15px;">
     <div style="padding: 0.25em" class="cilogi-title">
-        <h1 class="cilogi-title">Login</h1>
+        <h1 class="cilogi-title">Sign in</h1>
     </div>
     <hr class="soften">
     <section>
@@ -51,7 +51,7 @@
                             </button>
                         </div>
                     </form>
-                    <form class="login-form" method="POST" action="/login/facebook" style="margin-bottom: -10px;">
+                    <form class="login-form" method="POST" action="/login/facebook">
                         <div class="form-group">
                             <button type="submit" class="btn btn-block btn-social btn-facebook">
                                 <i class="fa fa-facebook"></i> Sign in with Facebook
@@ -60,11 +60,11 @@
                     </form>
                     <form id="loginByEmail" class="login-form form-inline" method="POST" action="/login/email">
                         <div class="form-group">
-                            <button type=submit class="btn btn-social btn-openid" style="margin-top: 10px;">
+                            <button type=submit class="btn btn-social btn-openid">
                                 <i class="fa fa-sign-in"></i> Sign in with Email
                             </button>
-                            <input type="text" name="email" id="email" class="form-control" placeholder="Email Address"
-                                   style="padding-bottom:5px; padding-top:1px; width:200px; margin-top: 10px; display: inline-block;">
+                            <input type="text" name="email" id="email" class="form-control" placeholder="Enter Email Address"
+                                   style="padding-bottom:5px; padding-top:1px; width:200px;  display: inline-block;">
                             <span id="emailResponse"></span>
                         </div>
                     </form>
@@ -75,11 +75,10 @@
     <section>
         <div class="row">
             <div class="col-md-6 col-sm-8">
-                <p>Please enter you email address and then press the <code>Sign in with Email</code>
-                   button.  An email will then be send to the address you provide.  When you
-                   receive the Email click on the link it provides and you'll be brought back to this
-                   site, signed in.  A cookie will be set which will
-                   keep you signed in for 30 days unless you sign out, or clean up your browser cookies.
+                <p>To sign in with Email please enter your email address and press the <code>Sign in with Email</code>
+                   button.  An email will be send to the address you provide.  When you
+                   receive the Email, click the link it provides and you'll be signed in and brought back to this
+                   site.  You will remain signed in for 30 days or until you sign out.
                 </p>
             </div>
         </div>
