more tidying, making use of sign-in consistent

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/login.html">Login</a></li>
+          <li><a href="/login.html">Sign in</a></li>
             <li><a href="/auth.ftl">Auth</a></li>
           <li><a href="/about.html">About</a></li>
         </ul>
@@ -37,11 +37,11 @@
     <hr class="soften">
     <section>
         <div class="row">
-            <p id="loginStatus">Acquiring Login Status...</p>
+            <p id="loginStatus">Acquiring Sign-in Status...</p>
 
-            <div id="loggedIn" style="display:none">
+            <div class="loggedIn" style="display:none">
                 <form id="logoutForm" method="POST" action="/logout">
-                    <button class="btn btn-primary" type="submit">Logout</button>
+                    <button class="btn btn-primary" type="submit">Sign out</button>
                 </form>
             </div>
 
@@ -50,8 +50,8 @@
                 <a class="btn btn-default" href="auth.ftl">Only for Authenticated users</a>
             </div>
 
-            <div id="loggedOut" style="margin-top: 10px; display:none">
-                <a class="btn btn-primary" href="/login.html">Login</a>
+            <div class="loggedOut" style="margin-top: 10px; display:none">
+                <a class="btn btn-primary" href="/login.html">Sign in</a>
             </div>
         </div>
     </section>
