more formatting changes

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -65,7 +65,7 @@
                             </button>
                             <input type="text" name="email" id="email" class="form-control" placeholder="Enter Email Address"
                                    style="padding-bottom:5px; padding-top:1px; width:200px;  display: inline-block;">
-                            <span id="emailResponse" style="display:block"></span>
+                            <span id="emailResponse" style="display:block;"></span>
                         </div>
                     </form>
                 </div>
